# docs/swagger.json
@@ -70,7 +70,7 @@
                 }
             },
             "post": {
-                "description": "Add person by JSON",
+                "description": "Принимает имя, фамилию и (опционально) отчество, автоматически определяет пол, возраст и национальность",
                 "consumes": [
                     "application/json"
                 ],
@@ -80,21 +80,21 @@
                 "tags": [
                     "people"
                 ],
-                "summary": "Create a new person",
+                "summary": "Создать нового человека",
                 "parameters": [
                     {
-                        "description": "Person",
+                        "description": "Данные для создания",
                         "name": "person",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Person"
+                            "$ref": "#/definitions/models.CreatePersonRequest"
                         }
                     }
                 ],
                 "responses": {
-                    "201": {
-                        "description": "Created",
+                    "200": {
+                        "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.Person"
                         }
@@ -202,6 +202,23 @@
         }
     },
     "definitions": {
+        "models.CreatePersonRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "Dmitriy"
+                },
+                "patronymic": {
+                    "type": "string",
+                    "example": "Vasilevich"
+                },
+                "surname": {
+                    "type": "string",
+                    "example": "Ushakov"
+                }
+            }
+        },
         "models.Person": {
             "type": "object",
             "properties": {
